# deadbeef-qt5

./: .gitignore  AboutDialog.cpp  CMakeLists.txt  DBApiWrapper.cpp  DBApiWrapper.h  DBFileDialog.cpp  DBFileDialog.h  GuiUpdater.cpp  GuiUpdater.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MetadataDialog.cpp  MetadataDialog.h  MetadataDialog.ui  MetadataPrefsDialog.cpp  MetadataPrefsDialog.h  MetadataPrefsDialog.ui  PlayList.cpp  PlayList.h  PlayListModel.cpp  PlayListModel.h  PlayListWidget.cpp  PreferencesDialog.cpp  PreferencesDialog.h  QtGui.cpp  QtGuiSettings.cpp  QtGuiSettings.h  QtGui_ru_RU.ts  QtGui_zh_CN.ts  README.md  Resources.qrc  SeekSlider.cpp  SeekSlider.h  SystemTrayIcon.cpp  SystemTrayIcon.h  TabBar.cpp  VolumeSlider.cpp  VolumeSlider.h
include/: callbacks.cpp  callbacks.h  strlcpy.h
plugins/CoverArt/: CoverArt.cmake  CoverArtCache.cpp  CoverArtCache.h  CoverArtWidget.cpp  CoverArtWidget.h  CoverArtWrapper.cpp  CoverArtWrapper.h  QPictureLabel.cpp  QPictureLabel.h
plugins/Hotkeys/: HotkeyReadDialog.cpp  Hotkeys.cmake  HotkeysTreeWidget.cpp
preferencesWidgets/: DspPreferencesWidget.cpp  DspPreferencesWidget.h  DspPreferencesWidget.ui  InterfacePreferencesWidget.cpp  InterfacePreferencesWidget.h  InterfacePreferencesWidget.ui  PluginSettingsWidget.cpp  PluginSettingsWidget.h  PluginsPreferencesWidget.cpp  PluginsPreferencesWidget.h  PluginsPreferencesWidget.ui  QDoubleSlider.cpp  QFileRequester.cpp  SoundPreferencesWidget.cpp  SoundPreferencesWidget.h  SoundPreferencesWidget.ui
widgets/: QDoubleSlider.cpp  QDoubleSlider.h  QFileRequester.h
